Add code to download phenotype data

--- a/download_geo.ipynb
+++ b/download_geo.ipynb
@@ -900,6 +900,7 @@
         "colab": {}
       },
       "source": [
+        "# Download beta-values\n",
         "beta <- getBeta(grSet)\n",
         "write.csv(file=\"GSE72251_bvalues.csv\", x=beta)"
       ],
@@ -910,6 +911,76 @@
       "cell_type": "code",
       "metadata": {
         "id": "whHRtIcBUsBb",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 758
+        },
+        "outputId": "3a1d7f6b-7406-4a6c-e864-06a9ad704e07"
+      },
+      "source": [
+        "# Download phenotype data\n",
+        "geoMat <- getGEO(\"GSE72251\")\n",
+        "pD.all <- pData(geoMat[[1]])\n",
+        "write.csv(file=\"GSE72251_all_phenotype.csv\", x=pD.all)"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Found 1 file(s)\n",
+            "\n",
+            "GSE72251_series_matrix.txt.gz\n",
+            "\n",
+            "Parsed with column specification:\n",
+            "cols(\n",
+            "  .default = col_double(),\n",
+            "  ID_REF = \u001b[31mcol_character()\u001b[39m\n",
+            ")\n",
+            "\n",
+            "See spec(...) for full column specifications.\n",
+            "\n",
+            "File stored at: \n",
+            "\n",
+            "/tmp/RtmpLFymMQ/GPL13534.soft\n",
+            "\n",
+            "Warning message:\n",
+            "“65 parsing failures.\n",
+            "   row     col           expected     actual         file\n",
+            "485513 SPOT_ID 1/0/T/F/TRUE/FALSE rs10796216 literal data\n",
+            "485514 SPOT_ID 1/0/T/F/TRUE/FALSE rs715359   literal data\n",
+            "485515 SPOT_ID 1/0/T/F/TRUE/FALSE rs1040870  literal data\n",
+            "485516 SPOT_ID 1/0/T/F/TRUE/FALSE rs10936224 literal data\n",
+            "485517 SPOT_ID 1/0/T/F/TRUE/FALSE rs213028   literal data\n",
+            "...... ....... .................. .......... ............\n",
+            "See problems(...) for more details.\n",
+            "”\n",
+            "Warning message in file(file, ifelse(append, \"a\", \"w\")):\n",
+            "“cannot open file '/home/george/Documents/Mestrado/projeto/GEO/GSE72251/GSE72251_all_phenotype.csv': No such file or directory”\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "error",
+          "ename": "ERROR",
+          "evalue": "ignored",
+          "traceback": [
+            "Error in file(file, ifelse(append, \"a\", \"w\")): cannot open the connection\nTraceback:\n",
+            "1. write.csv(file = \"/home/george/Documents/Mestrado/projeto/GEO/GSE72251/GSE72251_all_phenotype.csv\", \n .     x = pD.all, row.names = FALSE)",
+            "2. eval.parent(Call)",
+            "3. eval(expr, p)",
+            "4. eval(expr, p)",
+            "5. write.table(file = \"/home/george/Documents/Mestrado/projeto/GEO/GSE72251/GSE72251_all_phenotype.csv\", \n .     x = pD.all, row.names = FALSE, col.names = TRUE, sep = \",\", \n .     dec = \".\", qmethod = \"double\")",
+            "6. file(file, ifelse(append, \"a\", \"w\"))"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "S8R-cd7pjd-B",
         "colab_type": "code",
         "colab": {}
       },
