Added age prediction to factor CSV

--- a/fraction_phenotypes.ipynb
+++ b/fraction_phenotypes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 1,
    "source": [
     "import os\n",
     "import glob\n",
@@ -15,11 +15,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 5,
    "source": [
     "def create_pdf(df, dirname, filename):\n",
     "    \"\"\" Create a PDF with histograms for each column in df \"\"\"\n",
     "    output = os.path.join(dirname, filename.replace(\".csv\", \".pdf\"))\n",
+    "    print(output)\n",
     "    with PdfPages(output) as pdf:\n",
     "        for col in df.columns:\n",
     "            df[col].hist()\n",
@@ -27,13 +28,39 @@
     "            pdf.savefig()\n",
     "            plt.close()\n",
     "\n",
-    "data = glob.glob(\"/Users/geocarvalho/Documents/master/subgroups_tables/ssdp_sb_*_11cols.csv\")\n",
+    "ssdp = \"/Users/geocarvalho/Documents/master/subgroups_tables/*_11cols.csv\"\n",
+    "pysubgroup = \"/Users/geocarvalho/Documents/master/subgroups_tables/pysubgroup/*_11cols.csv\"\n",
+    "data = glob.glob(pysubgroup)\n",
     "for sb in data:\n",
     "    dirname = os.path.dirname(sb)\n",
     "    filename = os.path.basename(sb)\n",
     "    df = pd.read_csv(sb)\n",
     "    create_pdf(df, dirname, filename)"
    ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "/Users/geocarvalho/Documents/master/subgroups_tables/pysubgroup/pysubgroup_sb_9_11cols.pdf\n",
+      "/Users/geocarvalho/Documents/master/subgroups_tables/pysubgroup/pysubgroup_sb_4_11cols.pdf\n",
+      "/Users/geocarvalho/Documents/master/subgroups_tables/pysubgroup/pysubgroup_sb_1_11cols.pdf\n",
+      "/Users/geocarvalho/Documents/master/subgroups_tables/pysubgroup/pysubgroup_sb_10_11cols.pdf\n",
+      "/Users/geocarvalho/Documents/master/subgroups_tables/pysubgroup/pysubgroup_sb_6_11cols.pdf\n",
+      "/Users/geocarvalho/Documents/master/subgroups_tables/pysubgroup/pysubgroup_sb_3_11cols.pdf\n",
+      "/Users/geocarvalho/Documents/master/subgroups_tables/pysubgroup/pysubgroup_sb_8_11cols.pdf\n",
+      "/Users/geocarvalho/Documents/master/subgroups_tables/pysubgroup/pysubgroup_sb_5_11cols.pdf\n",
+      "/Users/geocarvalho/Documents/master/subgroups_tables/pysubgroup/pysubgroup_sb_2_11cols.pdf\n",
+      "/Users/geocarvalho/Documents/master/subgroups_tables/pysubgroup/pysubgroup_sb_7_11cols.pdf\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
    "outputs": [],
    "metadata": {}
   }
